array.island.Island.scala.error
Erreur de compilation :
Island:4: error: identifier expected but integer literal found.
  var x = num[0]
              ^Island:5: error: ']' expected but ';' found.
  for (i<- 1 to num.size){
^